option('jln_color', type : 'combo', choices : ['default', 'auto', 'never', 'always'], value : 'default')
option('jln_control_flow', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_coverage', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_cpu', type : 'combo', choices : ['default', 'generic', 'native'], value : 'default')
option('jln_debug', type : 'combo', choices : ['default', 'off', 'on', 'line_tables_only', 'gdb', 'lldb', 'sce'], value : 'default')
option('jln_diagnostics_format', type : 'combo', choices : ['default', 'fixits', 'patch', 'print_source_range_info'], value : 'default')
option('jln_diagnostics_show_template_tree', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_elide_type', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_exceptions', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_linker', type : 'combo', choices : ['default', 'bfd', 'gold', 'lld'], value : 'default')
option('jln_lto', type : 'combo', choices : ['default', 'off', 'on', 'fat', 'linker_plugin'], value : 'default')
option('jln_narrowing_error', type : 'combo', choices : ['default', 'off', 'on'], value : 'on')
option('jln_optimize', type : 'combo', choices : ['default', 'off', 'debugoptimized', 'minsize', 'release', 'fast'], value : 'default')
option('jln_pedantic', type : 'combo', choices : ['default', 'off', 'on', 'as_error'], value : 'on')
option('jln_pie', type : 'combo', choices : ['default', 'off', 'on', 'pic'], value : 'default')
option('jln_relro', type : 'combo', choices : ['default', 'off', 'on', 'full'], value : 'default')
option('jln_reproducible_build_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_rtti', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_sanitizers_extra', type : 'combo', choices : ['default', 'off', 'thread', 'pointer'], value : 'default')
option('jln_shadow', type : 'combo', choices : ['default', 'off', 'on', 'local', 'compatible_local', 'all'], value : 'off')
option('jln_stack_protector', type : 'combo', choices : ['default', 'off', 'on', 'strong', 'all'], value : 'default')
option('jln_stl_debug', type : 'combo', choices : ['default', 'off', 'on', 'allow_broken_abi', 'assert_as_exception'], value : 'default')
option('jln_stl_fix', type : 'combo', choices : ['default', 'off', 'on'], value : 'on')
option('jln_suggests', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_warnings', type : 'combo', choices : ['default', 'off', 'on', 'strict', 'very_strict'], value : 'on')
option('jln_warnings_as_error', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_whole_program', type : 'combo', choices : ['default', 'off', 'on', 'strip_all'], value : 'default')