option('jln_color', type : 'combo', choices : ['default', 'auto', 'never', 'always'], value : 'default')
option('jln_control_flow', type : 'combo', choices : ['default', 'off', 'on', 'branch', 'return', 'allow_bugs'], value : 'default')
option('jln_conversion_warnings', type : 'combo', choices : ['default', 'off', 'on', 'sign', 'conversion'], value : 'on')
option('jln_coverage', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_covered_switch_default_warnings', type : 'combo', choices : ['default', 'on', 'off'], value : 'on')
option('jln_cpu', type : 'combo', choices : ['default', 'generic', 'native'], value : 'default')
option('jln_debug', type : 'combo', choices : ['default', 'off', 'on', 'line_tables_only', 'gdb', 'lldb', 'sce'], value : 'default')
option('jln_diagnostics_format', type : 'combo', choices : ['default', 'fixits', 'patch', 'print_source_range_info'], value : 'default')
option('jln_diagnostics_show_template_tree', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_elide_type', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_exceptions', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_fix_compiler_error', type : 'combo', choices : ['default', 'off', 'on'], value : 'on')
option('jln_float_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_integer_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_linker', type : 'combo', choices : ['default', 'bfd', 'gold', 'lld', 'native'], value : 'default')
option('jln_lto', type : 'combo', choices : ['default', 'off', 'on', 'fat', 'thin'], value : 'default')
option('jln_microsoft_abi_compatibility_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'off')
option('jln_msvc_isystem', type : 'combo', choices : ['default', 'anglebrackets', 'include_and_caexcludepath', 'external_as_include_system_flag'], value : 'default')
option('jln_msvc_isystem_with_template_from_non_external', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_noexcept_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_optimization', type : 'combo', choices : ['default', '0', 'g', '1', '2', '3', 'fast', 'size', 'z'], value : 'default')
option('jln_other_sanitizers', type : 'combo', choices : ['default', 'off', 'thread', 'pointer', 'memory'], value : 'default')
option('jln_pedantic', type : 'combo', choices : ['default', 'off', 'on', 'as_error'], value : 'on')
option('jln_pie', type : 'combo', choices : ['default', 'off', 'on', 'static', 'fpic', 'fPIC', 'fpie', 'fPIE'], value : 'default')
option('jln_relro', type : 'combo', choices : ['default', 'off', 'on', 'full'], value : 'default')
option('jln_reproducible_build_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_rtti', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_shadow_warnings', type : 'combo', choices : ['default', 'off', 'on', 'local', 'compatible_local', 'all'], value : 'off')
option('jln_stack_protector', type : 'combo', choices : ['default', 'off', 'on', 'strong', 'all'], value : 'default')
option('jln_stl_debug', type : 'combo', choices : ['default', 'off', 'on', 'allow_broken_abi', 'allow_broken_abi_and_bugs', 'assert_as_exception'], value : 'default')
option('jln_stl_fix', type : 'combo', choices : ['default', 'off', 'on'], value : 'on')
option('jln_suggestions', type : 'combo', choices : ['default', 'off', 'on'], value : 'default')
option('jln_switch_warnings', type : 'combo', choices : ['default', 'on', 'off', 'enum', 'mandatory_default'], value : 'on')
option('jln_warnings', type : 'combo', choices : ['default', 'off', 'on', 'strict', 'very_strict'], value : 'on')
option('jln_warnings_as_error', type : 'combo', choices : ['default', 'off', 'on', 'basic'], value : 'default')
option('jln_whole_program', type : 'combo', choices : ['default', 'off', 'on', 'strip_all'], value : 'default')
